2009-03-02  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext): finish
	fixes for bugs #2540389: "Routing Broken from 2.1 to 3.0.3" and
	#2356151 "Routing broken when default route has a 0
	metric". Redirect script output to a file for the time when we
	remove static routing entries and add new ones to prevent ssh
	session from stalling. Restore output back to the terminal when
	script finishes or when an error is detected. Using idea suggested
	by Heiko Helmle <helman@gmx.de>

2009-02-27  vadim  <vadim@vk.crocodile.org>

	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext): fixed
	bugs #2540389: "Routing Broken from 2.1 to 3.0.3" and #2356151
	"Routing broken when default route has a 0 metric". Generated
	script preserved default route when it deleted route entries
	before installing new ones. This was different in v2.1 where
	default was deleted together with other routing entries. The
	reason for this change (made some time in summer of 2008) was that
	if user did not define default route in their routing ruleset, the
	script would delete existing default without installing new one,
	leaving firewall with no default route at all.  Now the script
	deletes default if there is new one to install and preserves it
	otherwise.

	* RoutingCompiler_ipt_writers.cpp (PrintRule::processNext): fixed
	bug (no #): if generated firewall script detects an error from one
	of the commands that install routing rules and runs function that
	restores previous routing entries, it should also run epilog
	commands.

2009-02-21  vadim  <vadim@vk.crocodile.org>

	* FirewallInstaller.cpp (FirewallInstaller::getDestinationDir):
	bugfix (bug was introduced in build 768). If user entered
	alternative activation command in the "installer" tab of the
	firewall object settings dialog, the program confused it with
	destination directory and tried to execute incorrect command to
	copy files to the firewall. This build (770) fixes this problem.
